cmake_minimum_required(VERSION 3.14)
project(Data_Structure C)

set(CMAKE_C_STANDARD 99)

add_subdirectory("01 Introduction")

add_subdirectory("02 Linear_List")

add_subdirectory("03 Stack_Queue")

add_subdirectory("04 String")

add_subdirectory("05 Array_GeneralizedList")

add_subdirectory("06 Tree_BinaryTree")

add_subdirectory("07 Graph")

add_subdirectory("08 Dynamic_Storage_Management")

add_subdirectory("09 Search")

add_subdirectory("10 Internal_Sort")

add_subdirectory("11 External_Sort")

add_subdirectory("12 File")
