add_subdirectory("01 SeqBinaryTree")
add_subdirectory("02 BinaryTree")
add_subdirectory("03 Tri_BinaryTree")
add_subdirectory("04 ThreadBinaryTree")
add_subdirectory("05 ParentTree")
add_subdirectory("06 ChildTree")
add_subdirectory("07 ChildSiblingTree")
add_subdirectory("08 MFSet")
add_subdirectory("09 HuffmanTree")
add_subdirectory("10 PowerSet")
add_subdirectory("11 NQueens")