add_subdirectory("01 MGraph")
add_subdirectory("02 ALGraph")
add_subdirectory("03 OLGraph")
add_subdirectory("04 AMLGraph")
add_subdirectory("05 SpanningTree")
add_subdirectory("06 StronglyConnectedComponents")
add_subdirectory("07 MiniSpanningTree")
add_subdirectory("08 ArticulationPoint")
add_subdirectory("09 TopologicalSort")
add_subdirectory("10 CriticalPath")
add_subdirectory("11 ShortestPath")