add_subdirectory("00 Base")
add_subdirectory("01 SequnceSearch")
add_subdirectory("02 BinSearch")
add_subdirectory("03 FibonacciSearch")
add_subdirectory("04 InterpolationSearch")
add_subdirectory("05 NearlyOptimalSearchTree")
add_subdirectory("06 BinarySortTree")
add_subdirectory("07 BalancedBinarySortTree")
add_subdirectory("08 B-Tree")
add_subdirectory("09 B+Tree")
add_subdirectory("10 DLTree")
add_subdirectory("11 TrieTree")
add_subdirectory("12 HashTable")
