add_subdirectory("00 SequenceListType")
add_subdirectory("00 StaticLinkedListType")
add_subdirectory("01 InsertSort")
add_subdirectory("02 BInsertSort")
add_subdirectory("03 2-InsertSort")
add_subdirectory("04 TInsertSort")
add_subdirectory("05 ShellSort")
add_subdirectory("06 BubbleSort")
add_subdirectory("07 QuickSort")
add_subdirectory("08 SelectSort")
add_subdirectory("09 HeapSort")
add_subdirectory("10 MergingSort")
add_subdirectory("11 RadixSort")
add_subdirectory("12 AddressSort")